--- a/i18n/locales/en/homepage.json
+++ b/i18n/locales/en/homepage.json
@@ -8,6 +8,22 @@
       "claim": "We believe in technology that empowers – not replaces."
     },
 
+    "services": {
+      "sectionTitle": "Our Services",
+      "sectionDescription": "We build systems that ease workloads, simplify processes, and foster trust.",
+      "empty": "No services available at the moment.",
+      "mail": "Mail",
+      "mailDescription": "GDPR-compliant email service for businesses and NGOs.",
+      "hosting": "Hosting",
+      "hostingDescription": "Secure, reliable, and managed hosting for websites and platforms.",
+      "software": "Software",
+      "softwareDescription": "Custom software development – tailored exactly to your processes.",
+      "websites": "Websites",
+      "websitesDescription": "Custom websites and interactive web applications.",
+      "aiSystems": "AI Systems",
+      "aiSystemsDescription": "Intelligent assistant solutions for automation and informed decisions."
+    },
+
     "cta": {
       "headline": "Want to get in touch?",
       "description": "Whether it's collaboration, an idea, or feedback – we look forward to hearing from you.",
