--- a/i18n/locales/en/imprint.json
+++ b/i18n/locales/en/imprint.json
@@ -1,1 +1,53 @@
-{}
+{
+  "imprint": {
+    "pageTitle": "Imprint – Rieger Systems",
+    "pageDescription": "Legal information according to §5 ECG for the Rieger Systems website.",
+    "heading": "Imprint",
+    "subheading": "Legal information according to §5 ECG, §14 UGB and §25 Media Act",
+    "fields": {
+      "companyName": {
+        "title": "Company Name"
+      },
+      "companyForm": {
+        "title": "Legal Form"
+      },
+      "address": {
+        "title": "Address"
+      },
+      "contact": {
+        "title": "Contact"
+      },
+      "commercialRegisterNumber": {
+        "title": "Commercial Register No."
+      },
+      "commercialRegisterCourt": {
+        "title": "Commercial Register Court"
+      },
+      "uidNumber": {
+        "title": "VAT ID No."
+      },
+      "managingDirector": {
+        "title": "Managing Director"
+      },
+      "companyPurpose": {
+        "title": "Company Purpose",
+        "content": "Development and operation of software and AI systems"
+      },
+      "chamberMembership": {
+        "title": "Chamber Membership",
+        "content": "Austrian Federal Economic Chamber – Information & Consulting Division"
+      },
+      "mediaLawResponsibility": {
+        "title": "Content responsibility according to §25 Media Act",
+        "content": "Tobias Rieger, address as above"
+      },
+      "onlineDisputeResolution": {
+        "title": "Online Dispute Resolution (EU)"
+      },
+      "disclaimer": {
+        "title": "Disclaimer",
+        "content": "Despite careful content control, we assume no liability for the content of external links. The operators of the linked pages are solely responsible for their content."
+      }
+    }
+  }
+}
